[workspace]
members = ["sylvia", "sylvia-derive"]
exclude = ["examples/*"]
resolver = "2"

[workspace.package]
version = "1.3.5"

[workspace.dependencies]
anyhow = "1.0.97"
cosmwasm-schema = "2.2.2"
cosmwasm-std = "2.2.2"
cw-multi-test = "2.3.2"
cw-storage-plus = "2.0.0"
cw-utils = "2.0.0"
schemars = "0.8.22"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
sylvia-derive = { version = "1.3.5", path = "sylvia-derive" }
thiserror = "2.0.12"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]
