[workspace]
members = ["sylvia", "sylvia-derive"]
exclude = ["examples/*"]
resolver = "2"

[workspace.package]
version = "2.0.0-rc.1"

[workspace.dependencies]
anyhow = "1.0.98"
cosmwasm-schema = "3.0.0-rc.0"
cosmwasm-std = "3.0.0-rc.0"
cw-multi-test = "3.0.0-rc.0"
cw-storage-plus = "3.0.0-rc.0"
cw-utils = "3.0.0-rc.0"
schemars = "0.8.22"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
sylvia-derive = { version = "2.0.0-rc.1", path = "sylvia-derive" }
thiserror = "2.0.12"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]
