[workspace]
members = [
    # Contract intefaces
    "interfaces/cw1",
    "interfaces/whitelist",
    "interfaces/cw4",
    "interfaces/cw20-allowances",
    "interfaces/cw20-minting",
    "interfaces/cw20-marketing",
    "interfaces/custom-and-generic",
    "interfaces/generic",

    # Contracts
    "contracts/cw1-whitelist",
    "contracts/cw1-subkeys",
    "contracts/cw20-base",
    "contracts/entry-points-overriding",
    "contracts/custom",
    "contracts/generic_contract",
    "contracts/generics_forwarded",
    "contracts/generic_iface_on_contract",
]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.86"
cosmwasm-schema = "2.1.3"
cw-multi-test = "2.1.1"
cw-storage-plus = "2.0.0"
cw-utils = "2.0.0"
cw2 = "2.0.0"
semver = "1.0.23"
serde = { version = "1.0.208", default-features = false, features = ["derive"] }
thiserror = "1.0.63"
assert_matches = "1.5.0"
