[package]
name = "sylvia-build"
version = "0.1.2"
authors = ["Bartłomiej Kuras <bart.k@confio.gmbh>"]
edition = "2021"
description = "Framework for generating trait based CosmWasm smart contracts - build utilities"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/sylvia"
homepage = "https://cosmwasm.com"
keywords = ["cosmwasm", "blockchain", "confio"]
categories = ["api-bindings", "wasm"]

[dependencies]
cargo_toml = "0.11"
syn = { version = "1", features = ["full", "fold"] }
syn-serde = "0.2.3"
serde_json = "1.0"
proc-macro-crate = "1.2"
proc-macro2 = "1.0"
quote = "1"
