[package]
name = "sylvia-derive"
version = { workspace = true }
authors = ["Bartłomiej Kuras <bart.k@confio.gmbh>"]
edition = "2021"
description = "Framework for generating trait based CosmWasm smart contracts - derives"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/sylvia"
homepage = "https://cosmwasm.com"
keywords = ["cosmwasm", "blockchain", "confio"]
categories = ["api-bindings", "wasm"]

[features]
mt = []
cosmwasm_1_2 = []

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.48", features = [
    "fold",
    "visit",
    "full",
    "extra-traits",
] }
quote = "1.0.23"
proc-macro2 = "1.0.50"
convert_case = "0.6.0"
proc-macro-error = "1.0.4"
proc-macro-crate = "1.3.0"
itertools = "0.12.0"

[dev-dependencies]
sylvia-runtime-macros = "0.6.0"
