[package]
name = "sylvia-derive"
version = { workspace = true }
authors = ["Bartłomiej Kuras <bart.k@confio.gmbh>"]
edition = "2021"
description = "Framework for generating trait based CosmWasm smart contracts - derives"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/sylvia"
homepage = "https://cosmwasm.com"
keywords = ["cosmwasm", "blockchain", "confio"]
categories = ["api-bindings", "wasm"]
readme = "../README.md"

[features]
mt = []
cosmwasm_1_2 = []

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.48", features = [
    "fold",
    "visit",
    "full",
    "extra-traits",
] }
quote = "1.0.23"
proc-macro2 = "1.0.50"
convert_case = "0.6.0"
proc-macro-error = "1.0.4"
proc-macro-crate = "1.3.0"
itertools = "0.12.0"

[dev-dependencies]
sylvia-runtime-macros = "0.6.0"
sylvia = { path = "../sylvia", features = [
    "mt",
    "stargate",
    "iterator",
    "cosmwasm_1_1",
    "cosmwasm_1_2",
    "cosmwasm_1_3",
    "cosmwasm_1_4",
] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
cosmwasm-schema = "1.5"
schemars = "0.8"
cw-storage-plus = "1.2.0"
thiserror = "1.0.58"
cw-multi-test = "0.20.0"
cw-utils = "1.0.2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]
