[package]
name = "sylvia-derive"
version = { workspace = true }
authors = ["Bartłomiej Kuras <bart.k@confio.gmbh>"]
edition = "2021"
description = "Framework for generating trait based CosmWasm smart contracts - derives"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/sylvia"
homepage = "https://cosmwasm.com"
keywords = ["cosmwasm", "blockchain", "confio"]
categories = ["api-bindings", "wasm"]
readme = "../README.md"

[features]
mt = []
cosmwasm_1_2 = []

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.72", features = [
    "fold",
    "visit",
    "full",
    "extra-traits",
] }
quote = "1.0.36"
proc-macro2 = "1.0.86"
convert_case = "0.6.0"
proc-macro-error = "1.0.4"
proc-macro-crate = "3.1.0"
itertools = "0.13.0"

[dev-dependencies]
sylvia-runtime-macros = "0.6.0"
sylvia = { path = "../sylvia", features = [
    "mt",
    "stargate",
    "iterator",
    "cosmwasm_1_1",
    "cosmwasm_1_2",
    "cosmwasm_1_3",
    "cosmwasm_1_4",
] }
serde = { workspace = true }
cosmwasm-schema = { workspace = true }
schemars = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }
cw-multi-test = { workspace = true }
cw-utils = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]
