[package]
name = "sylvia"
version = { workspace = true }
authors = ["Bartłomiej Kuras <bart.k@confio.gmbh>"]
edition = "2021"
description = "Framework for generating trait based CosmWasm smart contracts"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/sylvia"
homepage = "https://cosmwasm.com"
keywords = ["cosmwasm", "blockchain", "confio"]
categories = ["api-bindings", "wasm"]
readme = "../README.md"

[features]
mt = ["sylvia-derive/mt", "dep:cw-multi-test", "dep:anyhow", "dep:derivative"]
stargate = ["cosmwasm-std/stargate"]
iterator = ["cosmwasm-std/iterator"]
cosmwasm_1_1 = ["cosmwasm-std/cosmwasm_1_1"]
cosmwasm_1_2 = [
    "cosmwasm-std/cosmwasm_1_2",
    "dep:cw-utils",
    "sylvia-derive/cosmwasm_1_2",
    "cosmwasm_1_1",
]
cosmwasm_1_3 = ["cosmwasm-std/cosmwasm_1_3", "cosmwasm_1_2"]
cosmwasm_1_4 = ["cosmwasm-std/cosmwasm_1_4", "cosmwasm_1_3"]
cosmwasm_2_0 = ["cosmwasm-std/cosmwasm_2_0", "cosmwasm_1_4"]

[dependencies]
sylvia-derive = { workspace = true }
cosmwasm-std = { workspace = true, features = ["staking"] }
cosmwasm-schema = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde-cw-value = "0.7.0"
serde-json-wasm = "1.0.1"
konst = "0.3.8"
cw-multi-test = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
derivative = { version = "2.2.0", optional = true }
cw-utils = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
cw-multi-test = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
thiserror = { workspace = true }
trybuild = "1.0.91"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]
