[package]
name = "sylvia"
version = { workspace = true }
authors = ["Bartłomiej Kuras <bart.k@confio.gmbh>"]
edition = "2021"
description = "Framework for generating trait based CosmWasm smart contracts"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/sylvia"
homepage = "https://cosmwasm.com"
keywords = ["cosmwasm", "blockchain", "confio"]
categories = ["api-bindings", "wasm"]
readme = "../README.md"

[features]
default = ["staking"]
mt = ["sylvia-derive/mt", "dep:cw-multi-test", "dep:anyhow"]
stargate = ["cosmwasm-std/stargate", "cw-multi-test?/stargate"]
iterator = ["cosmwasm-std/iterator"]
staking = ["cosmwasm-std/staking", "cw-multi-test?/staking"]
cosmwasm_1_1 = ["cosmwasm-std/cosmwasm_1_1", "cw-multi-test?/cosmwasm_1_1"]
cosmwasm_1_2 = [
    "cosmwasm-std/cosmwasm_1_2",
    "cw-multi-test?/cosmwasm_1_2",
    "sylvia-derive/cosmwasm_1_2",
    "cosmwasm_1_1",
]
cosmwasm_1_3 = [
    "cosmwasm-std/cosmwasm_1_3",
    "cw-multi-test?/cosmwasm_1_3",
    "cosmwasm_1_2",
]
cosmwasm_1_4 = [
    "cosmwasm-std/cosmwasm_1_4",
    "cw-multi-test?/cosmwasm_1_4",
    "cosmwasm_1_3",
]
cosmwasm_2_0 = [
    "cosmwasm-std/cosmwasm_2_0",
    "cw-multi-test?/cosmwasm_2_0",
    "cosmwasm_1_4",
]
cosmwasm_2_1 = [
    "cosmwasm-std/cosmwasm_2_1",
    "cw-multi-test?/cosmwasm_2_1",
    "cosmwasm_2_0",
]
cosmwasm_2_2 = [
    "cosmwasm-std/cosmwasm_2_2",
    "cw-multi-test?/cosmwasm_2_2",
    "cosmwasm_2_1",
]

[dependencies]
sylvia-derive = { workspace = true }
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde-cw-value = "0.7.0"
serde-json-wasm = "1.0.1"
konst = "0.3.16"
cw-multi-test = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
cw-utils = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
anyhow = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
thiserror = { workspace = true }
trybuild = "1.0.102"
itertools = "0.14.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]
