[package]
name = "cw1-subkeys"
version = "0.3.0"
edition = "2021"

[features]
library = []
tests = ["library", "cw-multi-test", "anyhow"]

[dependencies]
anyhow = { version = "1.0.68", optional = true }
cosmwasm-schema = "1.2"
cosmwasm-std = { version = "1.2", features = ["staking"] }
cw-multi-test = { version = "0.16.2", optional = true }
cw-storage-plus = "1.0"
cw-utils = "1.0"
cw1 = { path = "../../interfaces/cw1" }
cw1-whitelist = { path = "../cw1-whitelist", features = ["library"] }
cw2 = "1.0"
getrandom = { version = "0.2.8", features = ["js"] }
serde = { version = "1.0.152", features = ["derive"] }
sylvia = { version = "0.3.0", path = "../../sylvia" }
thiserror = "1.0.38"

[dev-dependencies]
anyhow = "1.0.68"
cw-multi-test = "0.16"
sylvia = { version = "0.3.0", path = "../../sylvia", features = ["mt"] }
