[package]
name = "cw1-whitelist"
version = "0.1.2"
authors = ["Jan Woźniak <jan@confio.gmbh>"]
edition = "2021"
description = "Coverage of cw1-whitelist sylvia message generation."
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/sylvia"
homepage = "https://cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
tests = ["library", "cw-multi-test", "anyhow"]

[dependencies]
cosmwasm-std = { version = "1.0.0", features = ["staking"] }
schemars = "0.8.1"
serde = { version = "1", default-features = false, features = ["derive"] }
sylvia = { path = "../../sylvia" }
cw1 = { path = "../cw1" }
cw-storage-plus = "0.14.0"
thiserror = { version = "1.0.23" }
cw2 = "0.14.0"
cw-multi-test = { version = "0.14.0", optional = true }
anyhow = { version = "1", optional = true }

[dev-dependencies]
anyhow = "1"
cw-multi-test = "0.14.0"
assert_matches = "1.5.0"
