[package]
name = "cw1-whitelist"
version = "0.2.2"
authors = ["Jan Woźniak <jan@confio.gmbh>"]
edition = "2021"
description = "Coverage of cw1-whitelist sylvia message generation."
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/sylvia"
homepage = "https://cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
tests = ["library", "cw-multi-test", "anyhow"]

[dependencies]
cosmwasm-std = { version = "1.1", features = ["staking"] }
cosmwasm-schema = "1.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
sylvia = { version = "0.2.2", path = "../../sylvia", features = ["mt"] }
cw1 = { path = "../cw1" }
cw-storage-plus = "1.0"
thiserror = { version = "1.0" }
cw2 = "1.0"
cw-multi-test = { version = "0.16", optional = true }
anyhow = { version = "1.0", optional = true }
getrandom = { version = "0.2.8", features = ["js"] }

[dev-dependencies]
anyhow = "1.0"
cw-multi-test = "0.16"
assert_matches = "1.5.0"
sylvia = { version = "0.2.2", path = "../../sylvia", features = ["mt"] }
