[package]
name = "cw1"
version = "0.1.2"
authors = ["Jan Woźniak <jan@confio.gmbh>"]
edition = "2021"
description = "Coverage of cw1 sylvia message generation."
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/sylvia"
homepage = "https://cosmwasm.com"

[dependencies]
cw-utils = "0.14.0" 
cosmwasm-std = { version = "1.0.0", features = ["staking"] }
cw-storage-plus = "0.14.0" 
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
sylvia = { version = "0.1.2", path = "../../sylvia" }

[dev-dependencies]
anyhow = "1"
assert_matches = "1"
cosmwasm-schema = { version = "1.0.0" }
cw-multi-test = "0.14.0"
derivative = "2"