[package]
name = "cw20-base"
version = "0.2.2"
authors = ["Jan Woźniak <jan@confio.gmbh>"]
edition = "2021"
description = "Coverage of cw20-base message generation."
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/sylvia"
homepage = "https://cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
tests = ["library", "cw-multi-test", "anyhow"]

[dependencies]
anyhow = { version = "1.0", optional = true }
cosmwasm-schema = "1.1"
cosmwasm-std = { version = "1.2", features = ["staking"] }
cw-multi-test = { version = "0.16", optional = true }
cw-storage-plus = "1.0"
cw-utils = "1.0"
cw2 = "1.0"
cw20-allowances = { path = "../cw20-allowances" }
cw20-marketing = { path = "../cw20-marketing" }
cw20-minting = { path = "../cw20-minting" }
getrandom = { version = "0.2.8", features = ["js"] }
semver = "1.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
sylvia = { version = "0.2.2", path = "../../sylvia" }
thiserror = { version = "1.0" }

[dev-dependencies]
anyhow = "1.0"
assert_matches = "1.5.0"
cw-multi-test = "0.16"
cw-utils = "1.0"
sylvia = { version = "0.2.2", path = "../../sylvia", features = ["mt"] }
