[package]
name = "cw20-minting"
version = "0.3.0"
authors = ["Jan Woźniak <jan@confio.gmbh>"]
edition = "2021"
description = "Coverage of cw20-minting message generation."
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/sylvia"
homepage = "https://cosmwasm.com"

[features]
mt = ["sylvia/mt"]

[dependencies]
cosmwasm-std = { version = "1.2", features = ["staking"] }
cosmwasm-schema = "1.2"
serde = { version = "1.0", default-features = false, features = ["derive"] }
sylvia = { path = "../../sylvia" }

[dev-dependencies]
anyhow = "1.0"
cw-multi-test = "0.16"
