[package]
name = "custom"
version = { workspace = true }
authors = ["Jan Woźniak <jan@confio.gmbh>"]
edition = { workspace = true }
description = "Example of custom message usage."
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/sylvia"
homepage = "https://cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
mt = ["library", "anyhow", "cw-multi-test"]


[dependencies]
cw1 = { path = "../../interfaces/cw1" }
cw-storage-plus = { workspace = true }
sylvia = { path = "../../../sylvia" }
cw-multi-test = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
sylvia = { path = "../../../sylvia", features = ["mt"] }
