[package]
name = "custom"
version = { workspace = true }
authors = ["Jan Woźniak <jan@confio.gmbh>"]
edition = { workspace = true }
description = "Example of custom message usage."
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/sylvia"
homepage = "https://cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
mt = ["library", "sylvia/mt"]

[dependencies]
cw1 = { path = "../../interfaces/cw1" }
cw-storage-plus = { workspace = true }
sylvia = { path = "../../../sylvia" }

[dev-dependencies]
sylvia = { path = "../../../sylvia", features = ["mt"] }
