[package]
name = "cw1-subkeys"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
mt = ["library", "sylvia/mt"]

[dependencies]
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
cw1 = { path = "../../interfaces/cw1" }
whitelist = { path = "../../interfaces/whitelist" }
cw1-whitelist = { path = "../cw1-whitelist", features = ["library"] }
cw2 = { workspace = true }
sylvia = { path = "../../../sylvia" }
thiserror = { workspace = true }

[dev-dependencies]
sylvia = { path = "../../../sylvia", features = ["mt"] }
cw1-whitelist = { path = "../cw1-whitelist", features = ["mt"] }
cw1 = { path = "../../interfaces/cw1", features = ["mt"] }
