[package]
name = "cw1-whitelist"
version = { workspace = true }
authors = ["Jan Woźniak <jan@confio.gmbh>"]
edition = { workspace = true }
description = "Coverage of cw1-whitelist sylvia message generation."
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/sylvia"
homepage = "https://cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
mt = ["sylvia/mt", "library"]

[dependencies]
sylvia = { path = "../../../sylvia" }
cw1 = { path = "../../interfaces/cw1" }
whitelist = { path = "../../interfaces/whitelist" }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }
cw2 = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
sylvia = { path = "../../../sylvia", features = ["mt"] }
