[package]
name = "cw20-base"
version = { workspace = true }
authors = ["Jan Woźniak <jan@confio.gmbh>"]
edition = { workspace = true }
description = "Coverage of cw20-base message generation."
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/sylvia"
homepage = "https://cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
tests = ["library", "cw-multi-test", "anyhow"]

[dependencies]
anyhow = { version = "1.0", optional = true }
cosmwasm-schema = "1.2"
cosmwasm-std = { version = "1.3", features = ["staking"] }
cw-multi-test = { version = "0.16", optional = true }
cw-storage-plus = "1.0"
cw-utils = "1.0"
cw2 = "1.0"
cw20-allowances = { path = "../../interfaces/cw20-allowances" }
cw20-marketing = { path = "../../interfaces/cw20-marketing" }
cw20-minting = { path = "../../interfaces/cw20-minting" }
getrandom = { version = "0.2.8", features = ["js"] }
semver = "1.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
sylvia = { path = "../../../sylvia" }
thiserror = { version = "1.0" }

[dev-dependencies]
anyhow = "1.0"
assert_matches = "1.5.0"
cw-multi-test = "0.16"
cw-utils = "1.0"
sylvia = { path = "../../../sylvia", features = ["mt"] }
cw20-allowances = { path = "../../interfaces/cw20-allowances", features = [
  "mt",
] }
cw20-marketing = { path = "../../interfaces/cw20-marketing", features = ["mt"] }
cw20-minting = { path = "../../interfaces/cw20-minting", features = ["mt"] }
